- the unchangable values on the settings screen will disable when the game starts
4/19-------------------------------------------------------------
- fixed the player index bug as best I could
- added the show hand which updates to the most current hand
	- showId is the first index to be added to the shown hand array;
- added routes.js to handle requests

Need:
- a draw card button, table button, and discard along with all their functions
	- store player hand in an array within an array - accessable to players via their id
- a canvas that is set to display 3 players and yourself - interactable only in 3 sections
	- should draw the appropriate cards in the right order based on the 
- player names change according to each player's own nameset
- discard pile and main pile - change main to draw card and discard to send only
	- create the differnt functions - once the main is empty (main.length = 0) take all cards in the discard pile
	and put back into main - also call a reshuffle method
- create a send to table button while kayla makes a click and drag canvas function - choose the perferred method
- erase player index data like the cards they have when they leave - send their cards to the main when they leave
	- if someone joins in their place - give them a new random hand if at all possible OR dont clear data and save until new game
Want:
- custom deck - setting the numbers of each card type
- joker checkbox - in case a game wants jokers, it'll add 2 to the list
- password on settings that can be set once the server is run - prevents someone from ruining the game midway
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////
///////index5.js
let port = process.env.PORT || 4005;
app.listen(port,function(){
    console.log("started on port " + port);
}); 
/////////////replace window.load with
 $(document).ready(function(){
////////////////////////////
///// work on display hand
let shownHand = [];