@@ -146,8 +146,8 @@ function Discard(){
         if(!data)
           return;
         myHand = data.hand;
-        console.log("discard success");
-        console.log(myHand);
+        // console.log("discard success");
+        // console.log(myHand);
 
         let x = showId;
         shownHand.length = 0;
@@ -166,7 +166,7 @@ function Discard(){
                 }
             }
         }
-        console.log(shownHand);
+        // console.log(shownHand);
     });
 }
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -175,12 +175,12 @@ function sucessInfo(data){
         return;
     id = parseInt(data.id);
     realId = parseInt(data.realid);
-    console.log(id + " " + realId);
+    //console.log(id + " " + realId);
     document.getElementById("nameset").value = "Player " + id;
     document.getElementById("playerId").innerHTML = "PLAYER " + id;
     document.getElementById("gameName").innerHTML = data.gamename;
     myHand = data.hand;
-    console.log(myHand);
+    //console.log(myHand);
 
     let x = showId;
     shownHand.length = 0;
@@ -202,7 +202,7 @@ function sucessInfo(data){
 }
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
 $(document).ready(function(){
-    console.log("player ready");
+    //console.log("player ready");
     //$.get("/player2", {index:1,id:id},sucessInfo);
     $.get("/player2",sucessInfo);
 });
@@ -214,12 +214,6 @@ window.addEventListener('beforeunload',function () {
 playerCheck();
 function playerCheck() {
     $.get("/checkplayer", {active:1,id:realId,playername:$("#nameset").val()},function(data){
-        if(!data){
-            $("body").append("<div class = 'overlay'></div>");
-        }
-        else{
-            $( "body" ).removeClass( "overlay" );
-        }
         others = data.others;
         tableHand = data.tablehand;
         myHand = data.hand;
@@ -230,7 +224,7 @@ function playerCheck() {
             document.getElementById("chatbox").innerHTML +=  data.chat[i] + "\n";
         }
         if(data.empty == true){
-          $("#main").val("Empty");
+          $("#main").val("  Empty  ");
           $('#main').attr("disabled", true);
           $('#main').attr( 'title',"There are 0 cards in the Main Deck");
         }
@@ -313,6 +307,9 @@ function playerCheck() {
     let tempCard20 = new Image()
   tempCard20.src  =  "/views/clear.png"
 
+  let greenTable = new Image()
+  greenTable.src = "/views/greenTable.jpg"
+
 //setting window width and height
  window.innerWidth = 1920
   window.innerHeight = 1015
@@ -322,38 +319,6 @@ function playerCheck() {
 window.addEventListener('load', eventWindowLoaded, false);
 function eventWindowLoaded() {
    canvasApp();
-   //change card holder to acutal card
-   //players hand cards
-        // if(shownHand[0]!=null)
-        //     tempCard1.src = shownHand[0].image.replace('90x90', '225x225');
-        // if(shownHand[1]!=null)
-        //     tempCard2.src = shownHand[1].image.replace('90x90', '225x225');
-        // if(shownHand[2]!=null)
-        //     tempCard3.src = shownHand[2].image.replace('90x90', '225x225')
-        // if(shownHand[3]!=null)
-        //     tempCard4.src = shownHand[3].image.replace('90x90', '225x225');
-        // if(shownHand[4]!=null)
-        //     tempCard6.src = shownHand[4].image.replace('90x90', '225x225')
-        // if(shownHand[5]!=null)
-        //     tempCard7.src = shownHand[5].image.replace('90x90', '225x225');
-        // if(shownHand[6]!=null)
-        //     tempCard8.src = shownHand[6].image.replace('90x90', '225x225');
-
-//table cards (other players)
-//         tempCard9.src = jackHearts.replace('90x90', '225x225');
-//         tempCard10.src = jackSpades.replace('90x90', '225x225');
-//         tempCard11.src = jackDiamonds.replace('90x90', '225x225')
-//         tempCard12.src = jackClovers.replace('90x90', '225x225')
-//         tempCard13.src = aceHearts.replace('90x90', '225x225');
-//         tempCard14.src = aceSpades.replace('90x90', '225x225')
-//         tempCard15.src = aceDiamonds.replace('90x90', '225x225');
-//         tempCard16.src = aceClovers.replace('90x90', '225x225');
-//         tempCard17.src = twoHearts.replace('90x90', '225x225');
-//
-// //table for player (not other players)
-//         tempCard18.src = twoClover.replace('90x90', '225x225');
-//         tempCard19.src = twoDiamonds.replace('90x90', '225x225');
-//         tempCard20.src = twoSpades.replace('90x90', '225x225');
 
 
 }
@@ -435,25 +400,7 @@ theCanvas.style.top = "20px"
    }
    function onMouseClick(e)
    {
-          //code for mouse location
- //onmousemove = function(e){console.log("mouse location:",e.clientX , e.clientY)}
- const x = e.clientX -  (window.innerHeight-(window.innerHeight-430))
-    const y = e.clientY - 20
-    console.log("x: " + x + " y: " + y)
-  //  drawSquare(35,575,95,1,1)
-//drawSquare(1525,575,95,1,1)
-if((x > 5 && x < 60 || x > -28 && x < -5) &&
-  (y > window.innerHeight-441 && y <  window.innerHeight-380 || y > 550 && y < 605 || y > 475 && y < 540 ||  y > 550 && y < 605) ){
-  console.log("left button clicked")
-}
-if((x > 1005 && x < 1060 || x > 1220 && x < 1265 || x > 1325 && x < 1380 || x > 1500 && x < 1545 || x > 855 && x < 910 ||  x > 1425 &&
-   x < 1480 ||  x > 1250 && x < 1305  ||  x > 1045 && x < 1100)
- && (y > window.innerHeight-441 && y <  window.innerHeight-380 || y > 550 && y < 605 || y > 475 && y < 540 ||  y > 550 && y < 605) ){
-  console.log("right button clicked")
-}
-//click to find mouse x and y pos (doesnt spam like onmouesmove variable)
-//console.log(e.clientX + " " + e.clientY)
-//
+
 
 
 
@@ -488,8 +435,9 @@ if((x > 1005 && x < 1060 || x > 1220 && x < 1265 || x > 1325 && x < 1380 || x > 
  {
 
  // draw table background
- context.fillStyle = '#186110';
- context.fillRect(0,0,theCanvas.width,260);
+ //context.fillStyle = '#186110';
+ //context.fillRect(0,0,theCanvas.width,260);
+ context.drawImage(greenTable,0,0,theCanvas.width,260);
  context.strokeStyle = '#000000';
  context.strokeRect(0,0,theCanvas.width,260);
  //player and other players card placements (table)
@@ -499,24 +447,25 @@ if((x > 1005 && x < 1060 || x > 1220 && x < 1265 || x > 1325 && x < 1380 || x > 
 
 
  // draw players cards background
- context.fillStyle = '#305fb0';
- context.fillRect(0,505,theCanvas.width,220);
+
+  context.lineWidth = 8
+  context.strokeStyle = '#cc0000'
+  context.strokeRect(0,500,theCanvas.width,215);
+
 
 //players table placements
- context.fillStyle = '#ff0000';
- context.fillRect(0,275,theCanvas.width,220);
+// context.fillStyle = '#ff0000';
+// context.fillRect(0,275,theCanvas.width,220);
+ context.drawImage(greenTable,350,275,theCanvas.width/2+100,220);
 
  //outline tables
  context.strokeStyle = '#000000';
- context.strokeRect(0,505,theCanvas.width,220);
 
  context.strokeRect(0,275,theCanvas.width,220);
 
-
-
  {
 // player name display
- context.fillStyle = '#000000';
+ context.fillStyle = '#ffffff';
  context.font = '30px sans-serif';
  context.textBaseline = 'top';
  if(others.length>0)
@@ -525,10 +474,9 @@ if((x > 1005 && x < 1060 || x > 1220 && x < 1265 || x > 1325 && x < 1380 || x > 
  context.fillText (others[1].name, theCanvas.width/3+20, 10);
  if(others.length>2)
  context.fillText (others[2].name, theCanvas.width/3*2+30, 10);
- context.fillText ($("#nameset").val(), 10, 280);
+ context.fillText ($("#nameset").val(), 355, 285);
 
  }
-
 
 
 
@@ -572,14 +520,9 @@ if((x > 1005 && x < 1060 || x > 1220 && x < 1265 || x > 1325 && x < 1380 || x > 
  context.drawImage(tempCard19,720,285, 150, 200)
  context.drawImage(tempCard20,895,285, 150, 200)
 
-context.fillStyle = 'rgb(0,0,0,0.5)'
- context.fillRect(0,500,75,220)
-  context.fillRect(1485,500,75,220)
 
 
 
-drawSquare(35,575,95,1,1)
-drawSquare(1525,575,95,1,1)
 
  context.restore();
 
@@ -590,8 +533,8 @@ function drawSquare(xpos,ypos,rot,xscale,yscale){
 context.translate(xpos, ypos);
 context.rotate(rot);
 context.beginPath();
-      context.fillStyle = 'rgb(204,0,0,0.5)'
-      context.strokeStyle = '#000000';
+      context.strokeStyle = 'rgb(204,0,0,0.5)'
+     // context.strokeStyle = '#000000';
     context.rect(0,0,45,45);
     context.fill();
 context.stroke();
