@@ -40,7 +40,9 @@
                     <input id = "updateButton" type="button" value="Update Name" title= "Update and refresh current game name">
                     <br>
                     <label for = "Infinite"> Infinite Mode: </label>
-                    <input type = "checkbox" id = "Infinite" title= "All Discards Are Returned To The Main Deck">
+                    <input type = "checkbox" id = "Infinite" title= "All Discards Are Constantly Returned To The Main Deck">
+                    <label for = "ShuffleOn"> Shuffle On Replacement: </label>
+                    <input type = "checkbox" id = "ShuffleOn" disabled title= "Shuffle Discard Pile Into to Main Deck">
                     <!--<label for = "Auto"> Auto Cards: </label>
                     <input type = "checkbox" id = "Auto" title= "Players Always Maintain At least the Starting Hand"> -->
                 </div>
@@ -48,15 +50,16 @@
         </section>
         <br>
         <section id="submit">
-            <!--<input type="reset" name="reset" value="Reset">
+            <input type="reset" name="reset" value="Reset">
             <input id = "GameButton" type="button" value="Create Game" title= "Start new game - this will clear any previous game history" onClick="SetGame()">
-            <input id = "end" type="button" value="End Game" title= "End the Current Running Game">-->
+            <!--<input id = "end" type="button" value="End Game" title= "End the Current Running Game">-->
         </section>
         </form>
 
         <script>
             function SetGame(){
-                $.post("/create",{playernum:$("#playernum").val(), handnum:$("#hand").val(), name:$("#name").val()},success);
+                $.post("/create",{playernum:$("#playernum").val(), handnum:$("#hand").val(), name:$("#name").val(),
+                      infinite:$("#Infinite").prop("checked"),shuffleon:$("#ShuffleOn").prop("checked")},success);
             }
             /////////////////////////////////////////////////////////////////////////////////////////////////////////
             function UpdateGame(){
@@ -101,6 +104,8 @@
                 if(data.gameactive == true){
                     $('#playernum').attr("disabled", true);
                     $('#hand').attr("disabled", true);
+                    $('#Infinite').attr("disabled", true);
+                    $('#ShuffleOn').attr("disabled", true);
 
                     $("#GameButton").val("End Game");
                     $("#GameButton").attr( 'title',"End the Current Running Game");
@@ -109,6 +114,11 @@
                 else if(data.gameactive == false){
                     $('#playernum').removeAttr("disabled");
                     $('#hand').removeAttr("disabled");
+                    $('#Infinite').removeAttr("disabled");
+                    $('#ShuffleOn').attr("disabled", !$("#Infinite").prop("checked"));
+                    if($("#ShuffleOn").is(":disabled")){
+                        $("#ShuffleOn").prop('checked', false);
+                    }
 
                     $("#hand").attr( 'max',data.maxhand);
                     if($("#hand").val() > data.maxhand){
@@ -131,6 +141,8 @@
                     $("#playernum").val(data.playernum);
                     $("#hand").val(data.handnum);
                     $("#name").val(data.gamename);
+                    $("#Infinite").prop('checked', data.infinite);
+                    $("#ShuffleOn").prop('checked', data.shuffleon);
                 });
             });
         </script>
