@@ -33,8 +33,8 @@
           </div>
           <hr>
           <div id = "shiftButtons">
-            <input id="shiftLeft" type= "button" value="Shift Left" title= "Shift Left" onClick = "shiftLeft()" >
-            <input id="shiftRight" type= "button" value="Shift Right" title= "Shift Right" onClick = "shiftRight()" >
+            <input id="shiftLeft" type= "button" value=" < Shift Left" title= "Shift Hand to the Left" onClick = "shiftLeft()" >
+            <input id="shiftRight" type= "button" value="Shift Right > " title= "Shift Hand to the Right" onClick = "shiftRight()" >
           </div>
       </div>
     </section>
